--- a/greeter.html
+++ b/greeter.html
@@ -3,5 +3,6 @@
     <head><title>TypeScript Greeter</title></head>
     <body>
         <script src="greeter.js"></script>
+        <script src="demo.js"></script>
     </body>
 </html>
